[tool.poetry]
name = "arma_server_tools"
version = "0.1.0"
description = ""
authors = ["Ryan <citizen.townshend@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
beautifulsoup4 = "^4.9.3"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
